# stratascratch

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: github-actions.yaml
input_data/: bikes_last_used.csv
input_questions/: bikes_last_used.txt
src/: bikes_last_used.py
tests/: conftest.py  test_bikes_last_used.py
