[tool.poetry]
name = "stratascratch"
version = "0.1.0"
description = ""
authors = ["NLevy1 <https://github.com/NLevy1>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.ruff]
line-length = 120
fix = true
select = ["I001", "I002"] #isort rules

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pyspark = "^3.5.3"
chispa = "^0.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "nexus"
url = "https://p-nexus-3.development.nl.eu.abnamro.com:8443/repository/python-group/simple/"
priority = "primary"
